--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
+    "axios": "^0.9.1",
     "body-parser": "^1.15.0",
     "bookshelf": "^0.9.2",
     "express": "^4.13.4",
@@ -46,6 +47,7 @@
     "pg": "^4.5.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-router": "^2.0.1",
     "webpack": "^1.12.14"
   }
 }
