--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
+    "css-loader": "^0.23.1",
     "eslint": "^2.4.0",
     "eslint-config-airbnb": "^6.1.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.2.1",
+    "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "pre-commit": "^1.1.2",
     "react-addons-test-utils": "^0.14.7",
+    "style-loader": "^0.13.0",
     "supertest": "^1.2.0",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.10.0"
@@ -43,6 +46,7 @@
   "dependencies": {
     "axios": "^0.9.1",
     "bcrypt": "^0.8.5",
+    "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
     "bookshelf": "^0.9.2",
